--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,7 @@
 .fontC {
   font-family: "Lucida Console", "Courier New", monospace;
 }
+.kartica {
+  font-family: "Inika", sans-serif;
+  color: black;
+}
